--- a/src/main/resources/static/views/business.html
+++ b/src/main/resources/static/views/business.html
@@ -17,8 +17,9 @@
 <div class="container-fluid" >
   <h1>WellCome To Ashraf Pharmacy</h1> 
 	<p>Ashraf Pharmacy Moto</p>
-	<a href="/sales" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Sales Statics</a>
-	<a href="/expense" class="btn btn-primary" type="button" id="companyBtn"name="medicineBtn" >Expense Statics</a>
+	<a href="/sales" class="btn btn-primary" type="button"  >Sales Statics</a>
+	<a href="/expense" class="btn btn-primary" type="button" >Expense Statics</a>
+	<a href="/businessGP" class="btn btn-primary" type="button"  >Graphical Statics</a>
 </div>
 </body>
 </html>
